--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
