--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.13",
     "vue-the-mask": "^0.11.1",
     "vuex": "^4.0.2"
